added many literature references in the introduction, especially at controversial sections

--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -291,4 +291,150 @@
   keywords = {URL},
 }
 
+@TechReport{acatech_2017,
+  author      = {Susanne Kadner and Johannes Winter and Anselm Blocher and Dietmar Dengler and Marcus Fehling and Berthold Haustein and Hilko Hoffmann and Rainer Jurkschat and Kai Kreisköther and Norbert Reithinger and Marius Schumacher and Igor Tchouchenkov and Thorsten Westermann},
+  date        = {2017-03-20},
+  institution = {acatech -- Deutsche Akademie der Technikwissenschaften},
+  title       = {Fachforum autonome Systeme -- Chancen und Risiken für Wirtschaft, Wissenschaft und Gesellschaft},
+  url         = {https://www.acatech.de/publikation/fachforum-autonome-systeme-chancen-und-risiken-fuer-wirtschaft-wissenschaft-und-gesellschaft-abschlussbericht/},
+  urldate     = {2022-09-06},
+  abstract    = {Wir erleben einen rasanten, von digitalen Technologien getriebenen Umbruch. Die Basis dieser digitalen Transformation bilden Sensorik, Maschinelles Lernen und Robotik. Diese Techniken und Anwendungen werden immer günstiger und sind in immer größeren Umfang verfügbar. Nützliche neue IT-basierte Systeme, zum Beispiel zur Fahrerassistenz, für Smartphones und die wachsende Gerätevernetzung, werden in unserem Alltag zunehmend wichtiger und bereiten den Weg für die Einführung autonomer Systeme.
+
+Die Expertinnen und Experten des Fachforums Autonome Systeme konzentrieren sich in ihrem Bericht auf vier zentrale Anwendungsbereiche: die industrielle Produktion, den Straßen- und Schienenverkehr, das Smart Home sowie den Einsatz autonomer Systeme in menschenfeindlicher Umgebung. Für diese Bereiche haben sie technologische Voraussetzungen, Rahmenbedingungen und gesellschaftliche Herausforderungen analysiert.},
+  keywords    = {book},
+}
+
+@TechReport{EFI_autSysteme_2018,
+  author      = {Dumitrescu, Roman and Gausemeier, Jürgen and Slusallek, Philipp and Cieslik, Sarah and Demme, Georg and Falkowski, Tommy and Hoffmann, Hilko and Kadner, Susanne and Reinhart, Felix and Westermann, Thorsten and Winter, Johannes},
+  date        = {2018-01-28},
+  institution = {Expertenkommission Forschung und Innovation (EFI), Berlin},
+  title       = {Studie "Autonome Systeme"},
+  url         = {https://www.econstor.eu/handle/10419/175555},
+  urldate     = {2022-09-06},
+  abstract    = {Autonome Systeme bringen durch ihre besonderen Eigenschaften grundlegende Veränderungen für Wirtschaft und Gesellschaft mit sich. Sie können dazu beitragen, Produktionsprozesse, Mobilitäts- und Logistiksysteme besser auf den Menschen abzustimmen sowie flexibler und ressourcenschonender zu gestalten. Autonome Smart Homes bzw. Smart Buildings werden im Zusammenspiel mit intelligenten, autonomen Energienetzen eine sehr große Rolle bei der Steigerung der Energieeffizienz haben. Aber auch in anderen Bereichen wie dem Gesundheitssektor sowie in menschenfeindlichen Umgebungen eröffnen sich große Nutzenpotenziale für den Einsatz autonomer Systeme. Ausgehend von den anerkannt großen gesellschaftlichen und wirtschaftlichen Potenzialen, die autonome Systeme für den deutschen Industrie-, Wissenschafts- und Innovationsstandort haben, ist es Aufgabe dieser Studie, eine erste Bestandsaufnahme zu Deutschlands internationaler Position bei den grundlegenden technologischen Komponenten autonomer Systeme sowie in den Anwendungsfeldern Mobilität, industrielle Produktion, Smart Home, menschenfeindliche Umgebungen, Gesundheit, Energie und Landwirtschaft herauszuarbeiten.},
+  keywords    = {book},
+}
+
+@Conference{Liggesmeyer_2019,
+  author    = {Thomas Kuhn and Peter Liggesmeyer},
+  booktitle = {Autonome Systeme und Arbeit},
+  date      = {2019-01-30},
+  title     = {Autonome Systeme -- Potenziale und Herausforderungen: Perspektiven, Herausforderungen und Grenzen der Künstlichen Intelligenz in der Arbeitswelt},
+  doi       = {10.14361/9783839443958-003},
+  isbn      = {978-3-8376-4395-4},
+  pages     = {27--46},
+  publisher = {transcript Verlag},
+  url       = {https://www.researchgate.net/publication/338265062_Autonome_Systeme_Potenziale_und_Herausforderungen_Perspektiven_Herausforderungen_und_Grenzen_der_Kunstlichen_Intelligenz_in_der_Arbeitswelt},
+  urldate   = {2022-09-06},
+  abstract  = {Intelligente Planungssysteme und smarte Roboter: In Zukunft werden Autonome Systeme, die auf den Prinzipien der Künstlichen Intelligenz basieren, Einzug auch in die Arbeitswelt halten. Dies wirft nicht nur erneut Fragen nach den Konsequenzen für Jobs und Qualifikationen auf - ungeklärt sind weiterhin die tatsächlichen Anwendungsmöglichkeiten dieser Systeme sowie die daraus folgenden arbeitspolitischen und ethischen Probleme. Dieser Band leistet einen interdisziplinären Beitrag zum laufenden Diskurs.},
+  keywords  = {book},
+}
+
+@Online{Adler_2019,
+  author   = {Rasmus Adler},
+  date     = {2019-09-06},
+  editor   = {{Fraunhofer IESE}},
+  title    = {Autonom oder vielleicht doch nur hochautomatisiert? Was ist z.B. der Unterschied zwischen autonomem Fahren und hochautomatisiertem Fahren?},
+  url      = {https://www.iese.fraunhofer.de/blog/autonom-oder-vielleicht-doch-nur-hochautomatisiert-was-ist-eigentlich-der-unterschied/},
+  language = {german},
+  urldate  = {2022-09-06},
+  abstract = {Autonomie, Automatisierung, Autarkie, Vernetzung… viele Begriffe tummeln sich im Kontext der „autonomen Systemen“. So sprechen wir schon von autonomem Fahren, wenn das Fahrzeug bestimmte Fahraufgaben selbstständig und ohne menschlichen Eingriff übernimmt. Dabei handelt es sich streng genommen lediglich um ein automatisiertes und vielleicht im besten Fall hochautomatisiertes Fahren. Und weil es so kompliziert ist, diese Begriffe voneinander abzugrenzen und ich oft nach einer Definition gefragt werde, habe ich mich als Programmmanager für „autonome Systeme“ im folgenden Blogbeitrag damit beschäftigt, Kriterien zur Abgrenzung zusammenzutragen und die Sicht des Fraunhofer IESE auf die Begriffswelt wiederzugeben.},
+  keywords = {URL},
+}
+
+@Online{Wiki_Autonomie,
+  author   = {Wikipedia{: }Autonomie},
+  date     = {2022-06-04},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {Autonomie},
+  url      = {https://de.wikipedia.org/w/index.php?title=Autonomie&oldid=224750608},
+  language = {German},
+  urldate  = {2022-09-06},
+  keywords = {URL},
+}
+
+@Online{Schneider_2021,
+  author   = {Jens Heidrich and Daniel Schneider and Andreas Jedlitschka},
+  date     = {2021-03-04},
+  editor   = {{Fraunhofer IESE}},
+  title    = {Dependable AI / Verlässliche KI – Ein Überblick},
+  url      = {https://www.iese.fraunhofer.de/blog/dependable-ai/},
+  language = {german},
+  urldate  = {2022-09-06},
+  abstract = {Künstliche Intelligenz (KI) steckt heutzutage bereits in vielen Systemen: vom Sprachassistenten bis hin zu intelligenten Algorithmen, die unser Verhalten beim Online-Shopping oder in Social Media auswerten. In Zukunft werden uns KI-Systeme noch viel häufiger begegnen und das insbesondere in kritischen Anwendungsfeldern, wie autonomem Fahren, Produktionsautomatisierung/Industrie 4.0 oder Medizintechnik. Kritisch sind diese Anwendungsfelder, weil ein Fehlverhalten des KI-Systems zu einer Gefahr für Leib und Leben werden kann; beispielsweise, wenn ein autonom fahrendes Fahrzeug einen Menschen beim Überqueren einer Straße nicht erkennt oder wenn ein autonomer OP-Roboter eine Fehlfunktion bei einer Operation hat. Im folgenden Beitrag zum Thema »Dependable AI / Verlässliche KI« soll insbesondere der Aspekt der Absicherung von KI-Systemen diskutiert werden.},
+  keywords = {URL},
+}
+
+@Online{Adler_2021,
+  author   = {Rasmus Adler},
+  date     = {2021-06-10},
+  editor   = {{Fraunhofer IESE}},
+  title    = {Autonome Systeme: großes Potenzial für die digitale Zukunft},
+  url      = {https://www.iese.fraunhofer.de/blog/autonome-systeme/},
+  language = {german},
+  urldate  = {2022-09-06},
+  abstract = {Autonome Systeme bieten enormes Potenzial, entscheidend zur Lösung der aktuellen ökologischen, gesellschaftlichen und wirtschaftlichen Herausforderungen beizutragen. Dieser Blog-Beitrag erklärt begleitend zu unserer Podcast-Folge zum Thema »Autonome Systeme», was autonome Systeme sind, welche Arten es gibt, wo sie zur Anwendung kommen, welche Potenziale sie bieten, welche Hürden es gibt, warum ihre gesellschaftliche Relevanz zunehmen wird, was Künstliche Moral ist und zeigt, wie das Fraunhofer IESE Unternehmen bei Autonomen Systemen unterstützen kann.},
+  keywords = {URL},
+}
+
+@TechReport{DIN_EN_61508-3_2011-02,
+  author      = {{DIN EN 61508-3}},
+  date        = {2011-02},
+  institution = {DKE Deutsche Kommission Elektrotechnik Elektronik Informationstechnik im DIN und VDE},
+  title       = {Funktionale Sicherheit sicherheitsbezogener elektrischer/elektronischer/programmierbarer elektronischer Systeme -- Teil 3: Anforderungen an Software (IEC 61508-3:2010); Deutsche Fassung EN 61508-3:2010},
+  language    = {deutsch},
+  url         = {https://www.beuth.de/de/norm/din-en-61508-3/135505701},
+  urldate     = {2022-09-06},
+  abstract    = {DIN EN 61508-3 (VDE 0803-3): a) ist dazu vorgesehen, nur nach einem gründlichen Verständnis der IEC 61508-1 und IEC 61508-2 angewendet zu werden; b) trifft auf jede Software zu, die einen Teil eines sicherheitsbezogenes Systems bildet oder verwendet wird, um ein sicherheitsbezogenes System im Anwendungsbereich der IEC 61508-1 und IEC 61508-2 zu entwickeln. Diese Software wird dann sicherheitsbezogene Software genannt (einschließlich Betriebssysteme, Systemsoftware, Software in Kommunikationsnetzwerken, Funktionen der Mensch-Maschinen-Schnittstelle und Firmware sowie Anwendungssoftware); c) stellt bestimmte Anforderungen bereit, die anwendbar sind, um Werkzeuge zu unterstützen, die verwendet werden, um ein sicherheitsbezogenes System innerhalb des Anwendungsbereichs der IEC 61508-1 und IEC 61508-2 zu entwickeln und zu konfigurieren; d) fordert, dass die Sicherheitsfunktionen der Software und die Software-Sicherheits-Integritätslevel spezifiziert werden. Sollte dies bereits als Teil der Spezifikation des E/E/PE sicherheitsbezogenen Systems (siehe 7.2 der IEC 61508 -2) gemacht worden sein, so muss es an dieser Stelle nicht noch einmal wiederholt werden. Das Spezifizieren der Sicherheitsfunktionen der Software und der Software-Sicherheits-Integritätslevel ist ein iterativer Prozess. Zur Struktur der Dokumentation siehe Abschnitt 5 und Anhang A der IEC 61508-1. Die Struktur der Dokumentation kann die Prozesse des Unternehmens berücksichtigen und ebenso die Arbeitserfahrung für das spezielle Anwendungsgebiet; e) legt Anforderungen und Tätigkeiten fest, die in den Phasen des Lebenszyklus während des Entwurfs und der Entwicklung der sicherheitsbezogenen Software (das Modell des Software-Sicherheitslebenszyklus) angewendet werden müssen. Diese Anforderungen beinhalten den Einsatz von Maßnahmen und Techniken in der Software, die zur Vermeidung und Beherrschung von Fehlern und Versagensfällen dem Sicherheits-Integritätslevel entsprechend abgestuft sind; f) liefert Anforderungen an die Informationen zur Software-Sicherheits-Validierung, die an die Organisation, die die E/E/PES-Integration durchführt, weitergeleitet werden; g) liefert Anforderungen zur Vorbereitung von Informationen und Prozeduren, die die Software betreffen und die vom Anwender für den Betrieb und die Instandhaltung des sicherheitsbezogenen Systems benötigt werden; h) liefert Anforderungen, die von der Organisation, die Modifikationen an der sicherheitsbezogenen Software durchführt, zu erfüllen sind; i) liefert, im Zusammenwirken mit der IEC 61508-1 und IEC 61508-2, Anforderungen an Hilfswerkzeuge, wie Werkzeuge zur Entwicklung und zum Entwurf, Übersetzer, Werkzeuge für Test und Debugging und Werkzeuge für das Konfigurationsmanagement. Zuständig ist das GK 914 "Funktionale Sicherheit elektrischer, elektronischer und programmierbarer elektronischer Systeme (E, E, PES) zum Schutz von Personen und Umwelt" der DKE Deutsche Kommission Elektrotechnik Elektronik Informationstechnik im DIN und VDE.},
+  file        = {:/home/bk/Seafile/BAuA_Files/Literatur/Normen/Standards_Functional_Safety_MD/DIN_EN_61508-3_2010__VDE_0803-3_2011-02.pdf:PDF},
+  keywords    = {book},
+  owner       = {bk},
+  shorttitle  = {DIN EN 61508-3:2011-02},
+}
+
+@TechReport{DIN_EN_ISO_13849-1_2016,
+  author      = {{DIN EN ISO 13849-1}},
+  date        = {2016-06},
+  institution = {DIN Deutsches Institut für Normung e. V.},
+  title       = {Sicherheit von Maschinen -- Sicherheitsbezogene Teile von Steuerungen -- Teil 1: Allgemeine Gestaltungsleitsätze (ISO 13849-1:2015); Deutsche Fassung EN ISO 13849-1:2015},
+  language    = {deutsch},
+  url         = {http://www.beuth.de/de/norm/din-en-iso-13849-1/230387878},
+  urldate     = {2022-09-06},
+  abstract    = {Die Norm DIN EN ISO 13849-1 stellt Sicherheitsanforderungen und einen Leitfaden für die Prinzipien der Gestaltung und Integration sicherheitsbezogener Teile von Steuerungen bereit. Für diese Teile werden spezielle Eigenschaften einschließlich des perfomance level festgelegt, die zur Ausführung der entsprechenden Sicherheitsfunktionen erforderlich sind. Sie ist anzuwenden auf sicherheitsbezogene Teile von Steuerungen ungeachtet der verwendeten Technologie und Energie (elektrisch, hydraulisch, pneumatisch, mechanisch). Sie legt nicht fest, welche Sicherheitsfunktionen oder performance level für einen speziellen Fall verwendet werden. Die Norm stellt spezielle Anforderungen für sicherheitsbezogene Teile von Steuerungen mit programmierbaren elektronischen Systemen bereit. Sie stellt jedoch keine speziellen Anforderungen an den Entwurf von Produkten, die Teile von sicherheitsbezogenen Teilen von Steuerungen sind. Trotzdem können die angegebenen Prinzipien, wie Kategorien und performance level, verwendet werden.
+
+Änderungsvermerk:
+Gegenüber DIN EN ISO 13849-1:2008-12 wurden folgende Änderungen vorgenommen:
+a) Einarbeitung des Technischen Corrigendums ISO 13849-1:2006/Cor 1:2009;
+b) Löschung der früheren Tabelle 1 in der Einleitung;
+c) Aktualisierung und Hinzufügen normativer Verweisungen;
+d) Änderung von Definitionen der Begriffe 'Gefährdungssituation' und 'Betriebsart mit hoher Anforderungsrate oder Betriebsart mit kontinuierlicher Anforderung';
+e) Hinzufügen des neuen Begriffs und der Definition 'betriebsbewährt';
+f) Einfügen eines neuen Unterabschnitts 4.5.5 'Beschreibung des Ausgabeteils der SRP/CS nach Kategorien';
+g) Änderungen an den Anhängen, insbesondere bei Anhang I;
+h) Dokument redaktionell überarbeitet.},
+  file        = {:./Normen/Standards_Functional_Safety_MD/DIN_EN_ISO_13849-1_2016-06.pdf:PDF},
+  keywords    = {book},
+  owner       = {bk},
+  shorttitle  = {DIN EN ISO 13849-1:2016-06},
+}
+
+@TechReport{BAuA_Rechtsgutachten_KI_2021,
+  author      = {Thomas Jürgensohn and Christina Platho and David Stegmaier and Matthias Hartwig and Mathilde Krampitz and Lorenz Funk and Timon Plass and Heiko Ehrlich},
+  date        = {2021-04-30},
+  institution = {BAuA, Bundesanstalt für Arbeitsschutz und Arbeitsmedizin},
+  title       = {Rechtliche Rahmenbedingungen für die Bereitstellung autonomer und KI-Systeme},
+  doi         = {doi:10.21934/baua:bericht20210423},
+  language    = {German},
+  url         = {http://www.baua.de/dok/8859246},
+  urldate     = {2022-09-06},
+  abstract    = {Zentrale Fragestellung des Forschungsvorhabens war, ob und inwieweit der Einsatz von KI-Algorithmen (KI - Künstliche Intelligenz) in physischen Systemen der Industrie, Änderungen am bestehenden Rechtsrahmen wie beispielsweise Produktsicherheits- und Betriebssicherheitsrecht erforderlich machen. Aus der Verwendung datengetriebener Algorithmen, wie sie in maschinellen Lernverfahren, einem Teilgebiet der KI, zu finden sind, ergeben sich Besonderheiten gegenüber herkömmlicher Software. Diese betreffen Aspekte, wie z. B. die Nachvollziehbarkeit, die Vorhersehbarkeit, die Spezifizierbarkeit, die Robustheit oder die Transparenz. Für die rechtlichen Betrachtungen besonders relevant ist die neue Verfahrensweise, bei der durch die Verwertung vieler Daten in einem Trainingsprozess die Möglichkeit besteht, diese durch Erweiterung des Trainingsvorgangs in die Zeit des betrieblichen Einsatzes an die spezifischen Einsatzverhältnisse anzupassen. So sind beispielsweise weiterlernende Systeme - also solche, die sich im Betrieb auf Basis neuer Daten verändern - rechtlich nicht mehr nach den Kriterien des Produktsicherheitsrechts beherrschbar, da der maßgebliche Zeitpunkt der Risikobeurteilung (die Inbetriebnahme) die Veränderungen des Systems nach der Inbetriebnahme ausblendet.
+
+Als Bewertungsgrundlage wurde ein als Taxonomie ausgearbeitetes Kategoriensystem entwickelt, das Faktoren der Sicherheit in software-physischen (KI-)Systemen unter besonderer Berücksichtigung neuerer technischer Entwicklungen übersichtlich darstellt. Wesentliche Grundlage dieser Taxonomie waren umfangreiche Expertenbefragungen und ergänzende Inhalte aus der Literatur.
+
+Im Rahmen des Projekts wurden verschiedene Vorschläge zur Weiterentwicklung des Produktsicherheitsrechts ausgearbeitet. In dem Vorschlag "Anpassung des Produktbegriffs" wird der bestehende Rechtsbegriff "Produkt" dahingehend ergänzt, dass eine Veränderung des Produkts im Rahmen einer "bestimmungsgemäßen" Veränderbarkeit nicht zur Herstellung eines neuen Produkts führt. Wichtig ist, dass "bestimmungsgemäß" für das jeweilige Produkt genau definiert ist. Im Zuge der Ausarbeitung alternativer Rechtsvorschriften wird der Begriff "wandelbar" als eine Kombination mehrerer Dimensionen der entwickelten Taxonomie definiert.
+
+Als Rechtsfolge eines "wandelbaren Produkts" wird ein angepasstes "Produktbegleitungskonzept" erarbeitet. Den Hersteller sollten nach diesem Ansatz Pflichten zur Gewährleistung der Sicherheit über den gesamten bestimmungsgemäßen Produktlebenszyklus treffen. Das Produktbegleitungskonzept umfasst sowohl das Sammeln von Informationen im Betrieb des Produkts und deren Auswertung als auch das Ergreifen von Maßnahmen. Es geht hier also um Beobachtung und Reaktion - in Abgrenzung zur herkömmlichen Produktbeobachtung.},
+  keywords    = {book},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
